2015-06-10  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (save image name): use \Gin@ext rather than
	\PictExt (which is apparently always png).  Report from Simon Spiegel,
	10 Jun 2015 10:21:19.

2015-06-10  Radhakrishnan CV  <cvr@river-valley.org>

	* tex4ht-4ht.tex (biblatex): \blx@checksum was a parameterless
         macro, while the current biblatex defines it as a macro with three
         parameters. The macro has been redefined to match the package. The bug
         was reported by Simon Spiegel and fix suggested by Michal Hoftich.
         http://tug.org/pipermail/tex4ht/2015q2/001211.html (and previous).

2015-06-07  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex: huge update of T1-encoded fonts 
 	not previously supported by tex4ht.
 	* t1fontmake.lua: new script.
 	* t1fontsample.tex: new sample tex file.
	* Makefile (tex4ht_fonts_noncjk_derived): add two of
	the new aliases/t1fonts/*.htf files.
 	Mail of http://tug.org/pipermail/tex4ht/2015q2/001180.html.

2015-05-25  Michal Hoftich  <michal.h21@gmail.com>
        and Karl Berry <karl@gnu.org>

	* tex4ht-fonts-noncjk.tex (eccc): new font support.
	https://puszcza.gnu.org.ua/bugs/?253

	* Makefile (tex4ht_fonts_noncjk_derived): add the new
	 tex4ht.dir/texmf/tex4ht/ht-fonts/alias/ec/eccc.htf
	 tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/ec/eccc-uni.htf
	as htf output examples.

2015-04-14  Michal Hoftich  <michal.h21@gmail.com>

	* Makefile (tex4ht_4ht_derived): add memoir.4ht.
	* tex4ht-4ht.tex: improve array and tabular support for memoir;
	input array,dcolumn,tabularx,booktabs.4ht, disable \columnlines.
	http://puszcza.gnu.org.ua/bugs/?249

2015-04-01  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex: configure wrapfig to avoid spurious \par.
	https://puszcza.gnu.org.ua/bugs/?247

2015-02-17  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (spanish.4ht): fix missing csname when Spanish
	babel is used.
	https://puszcza.gnu.org.ua/bugs/?245